@@ -1,7 +1,9 @@
 1.3.0 unreleased
 ================
 
-
+ * Moved old_folder_contents over from CMFPlone as it is still used in
+   atct_topic_subtopics.pt.
+   [hannosch]
 
 1.2.0-final 2007-08-16
 ======================
